--- a/css/myStyles.css
+++ b/css/myStyles.css
@@ -94,3 +94,92 @@ logo::after {
 .down {
   font-weight: 700;
 }
+
+.nadpis {
+  color: #263238;
+  letter-spacing: 0.2px;
+  font-size: 36px;
+  text-align: center;
+  font-weight: 800;
+  font-family: "Montserrat", sans-serif;
+  line-height: 54px;
+  margin: 0 auto;
+  margin-top: 248px;
+}
+
+#box1 {
+  width: 480px;
+  height: 526px;
+  background-color: #ff725e;
+  border-radius: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+
+#box2 {
+  width: 480px;
+  height: 526px;
+  background-color: #ff725e;
+  border-radius: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+
+#box3 {
+  width: 480px;
+  height: 526px;
+  background-color: #ff725e;
+  border-radius: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+
+.flex-container {
+  margin-top: 50px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.obrazok {
+  margin: auto;
+  margin-top: 32px;
+}
+
+.featuresHeadline {
+  font-size: 30px;
+  color: white;
+  letter-spacing: 0.2px;
+  font-weight: 800;
+  line-height: 45px;
+  text-align: center;
+  margin: auto;
+  margin-top: 50px;
+}
+
+.featuresParagraph {
+  margin: auto;
+  font-size: 20px;
+  width: 417px;
+  color: white;
+  line-height: 30px;
+  letter-spacing: 0.2px;
+  text-align: center;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  margin-bottom: 32px;
+  margin-top: 10px;
+}
+
+#about {
+  margin-top: 200px;
+}
+
+.featuresParagraph em {
+  font-weight: 600;
+}
