--- a/css/myStyles.css
+++ b/css/myStyles.css
@@ -6,6 +6,8 @@
 html,
 body {
   font-family: "Montserrat", sans-serif;
+  min-height: 5300px;
+  overflow-x: hidden;
 }
 
 .container {
@@ -56,6 +58,7 @@ logo::after {
   font-size: 50px;
   line-height: 75px;
   font-weight: 700;
+  color: #263238;
 }
 
 #subheadline {
@@ -65,6 +68,7 @@ logo::after {
   font-weight: 400;
   margin-top: 24px;
   width: 732px;
+  color: #263238;
 }
 
 .middle {
@@ -182,4 +186,82 @@ logo::after {
 
 .featuresParagraph em {
   font-weight: 600;
+}
+
+.paragraph {
+  font-size: 20px;
+  width: 741px;
+  color: #263238;
+  line-height: 30px;
+  letter-spacing: 0.2px;
+  float: left;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+}
+
+.details {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 30px;
+  color: white;
+  background-color: #263238;
+  border-radius: 1092px;
+  border: none;
+  height: 46px;
+  text-align: center;
+  width: 99.9%;
+  margin: 0 auto;
+  margin-top: 18px;
+  letter-spacing: 0.2px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #263238;
+}
+
+.details a {
+  text-decoration: none;
+  color: white;
+}
+
+.details a:visited {
+  text-decoration: none;
+  color: white;
+}
+
+.nadpisA {
+  color: #263238;
+  letter-spacing: 0.2px;
+  font-size: 36px;
+  text-align: center;
+  font-weight: 800;
+  font-family: "Montserrat", sans-serif;
+  line-height: 54px;
+  margin: 0 auto;
+  margin-top: 200px;
+}
+
+.paragraph span {
+  font-weight: 600;
+}
+
+#companies {
+  margin-top: 200px;
+  background-color: #ff725e;
+  display: inline-block;
+  text-align: left;
+  width: 100vw;
+  position: absolute;
+  margin-left: -202px;
+  padding-left: 200px;
+  padding-top: 32px;
+  padding: 32px 0px 32px 200px;
+}
+#companies img {
+  vertical-align: middle;
+  padding: 0 81px;
+}
+
+#companies :first-child {
+  padding-left: 0px;
 }
