--- a/css/myStyles.css
+++ b/css/myStyles.css
@@ -250,18 +250,30 @@ logo::after {
   background-color: #ff725e;
   display: inline-block;
   text-align: left;
-  width: 100vw;
-  position: absolute;
-  margin-left: -202px;
-  padding-left: 200px;
+  width: 100%;
   padding-top: 32px;
-  padding: 32px 0px 32px 200px;
+  padding: 32px 0px 32px;
 }
 #companies img {
   vertical-align: middle;
-  padding: 0 81px;
 }
 
-#companies :first-child {
-  padding-left: 0px;
+#companies a {
+  margin: 0 40px;
+}
+
+#companies a:first-child {
+  margin-left: 0px;
+}
+
+.nadpisC {
+  color: white;
+  letter-spacing: 0.2px;
+  font-size: 36px;
+  text-align: center;
+  font-weight: 800;
+  font-family: "Montserrat", sans-serif;
+  line-height: 54px;
+  margin: 0 auto;
+  margin-bottom: 32px;
 }
