--- a/css/myStyles.css
+++ b/css/myStyles.css
@@ -44,18 +44,18 @@ body {
   box-shadow: 0 4px 2px -2px gray;
 }
 
-ul {
+.menu ul {
   list-style-type: none;
   float: right;
   margin-right: 20px;
 }
-ul li {
+.menu ul li {
   margin-top: 30px;
   display: inline-block;
   line-height: 30px;
 }
 
-ul li::after {
+.menu ul li::after {
   content: "";
   clear: both;
   display: table;
@@ -268,6 +268,8 @@ logo::after {
   line-height: 54px;
   margin: 0 auto;
   margin-top: 200px;
+  display: inline-block;
+  vertical-align: baseline;
 }
 
 .nadpisA small {
@@ -487,7 +489,7 @@ DOWNLOAD PAGE
 }
 
 #windows {
-  margin-top: 200px;
+  margin-top: 50px;
 }
 
 #windows h1 {
@@ -611,4 +613,74 @@ DOWNLOAD PAGE
 
 .download_button a:visited {
   color: white !important;
+}
+
+.os {
+  padding-left: 15px;
+}
+
+/* 
+FEATRES PAGE
+*/
+
+#aboutFeatures {
+  margin-top: 200px;
+}
+
+#aboutFeatures p {
+  margin-top: 10px;
+  font-size: 20px;
+  line-height: 30px;
+  letter-spacing: 0.2px;
+  color: #263238;
+}
+
+#aboutFeatures ul {
+  margin-top: -20px;
+  font-size: 24px;
+  line-height: 30px;
+  letter-spacing: 0.2px;
+  color: #263238;
+}
+
+#aboutFeatures ul li {
+  list-style: circle !important;
+  display: list-item;
+  list-style-position: inside !important;
+  font-size: 20px;
+  padding-bottom: 20px;
+}
+
+#aboutFeatures ul p {
+  list-style-type: none !important;
+  list-style-position: inside !important;
+}
+
+.imgCenter {
+  height: 404.083px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 24px;
+}
+
+table {
+  text-align: left;
+  margin: 20px 0px;
+  width: 100%;
+}
+
+table th {
+  font-weight: 600;
+}
+
+.first th {
+  font-size: 22px;
+  padding-bottom: 10px;
+  font-weight: 700;
+}
+
+.second {
+  font-style: italic;
+  font-weight: 400;
 }
