--- a/css/myStyles.css
+++ b/css/myStyles.css
@@ -1,21 +1,15 @@
-/* 
-  MAIN PAGE
-*/
-
+/* MAIN PAGE */
 * {
   margin: 0;
   padding: 0;
 }
-
 a {
   text-decoration: none;
   color: #263238;
 }
-
 a:visited {
   color: #263238;
 }
-
 html,
 body {
   font-family: "Montserrat", sans-serif;
@@ -30,20 +24,19 @@ body {
   margin: 0 auto;
   margin-top: 90px;
 }
-
 .container1 li a:hover {
   text-decoration: underline;
   transition: 0.5s;
 }
-
 .menu {
-  position: fixed; /* Set the navbar to fixed position */
-  top: 0; /* Position the navbar at the top of the page */
+  position: fixed;
+  /* Set the navbar to fixed position */
+  top: 0;
+  /* Position the navbar at the top of the page */
   width: 100%;
   background-color: white;
   box-shadow: 0 4px 2px -2px gray;
 }
-
 .menu ul {
   list-style-type: none;
   float: right;
@@ -54,32 +47,26 @@ body {
   display: inline-block;
   line-height: 30px;
 }
-
 .menu ul li::after {
   content: "";
   clear: both;
   display: table;
 }
-
 ul li a {
   font-size: 20px;
   padding-left: 70px;
   letter-spacing: 0.2px;
 }
-
 #logo {
   margin-top: 21px;
-  /*float: left;*/
   display: inline-block;
-  padding-bottom: 21px;
+  margin-bottom: 21px;
 }
-
 logo::after {
   content: "";
   clear: both;
   display: table;
 }
-
 #headline {
   margin-top: 227px;
   width: 732px;
@@ -89,7 +76,6 @@ logo::after {
   font-weight: 700;
   color: #263238;
 }
-
 #subheadline {
   letter-spacing: 0.2px;
   font-size: 30px;
@@ -99,7 +85,6 @@ logo::after {
   width: 732px;
   color: #263238;
 }
-
 .middle {
   display: inline-block;
 }
@@ -108,7 +93,6 @@ logo::after {
   width: 733.16px;
   margin-top: 114px;
 }
-
 .download {
   font-weight: 700;
   font-size: 30px;
@@ -123,11 +107,9 @@ logo::after {
   width: 279px;
   letter-spacing: 0.2px;
 }
-
 .down {
   font-weight: 700;
 }
-
 .nadpis {
   color: #263238;
   letter-spacing: 0.2px;
@@ -140,7 +122,6 @@ logo::after {
   margin-top: 248px;
   padding-bottom: 10px;
 }
-
 #box1 {
   width: 480px;
   height: 526px;
@@ -150,7 +131,6 @@ logo::after {
   flex-wrap: wrap;
   flex-direction: column;
 }
-
 #box2 {
   width: 480px;
   height: 526px;
@@ -160,7 +140,6 @@ logo::after {
   flex-wrap: wrap;
   flex-direction: column;
 }
-
 #box3 {
   width: 480px;
   height: 526px;
@@ -170,7 +149,6 @@ logo::after {
   flex-wrap: wrap;
   flex-direction: column;
 }
-
 .flex-container {
   margin-top: 50px;
   display: flex;
@@ -179,12 +157,10 @@ logo::after {
   justify-content: space-between;
   align-items: flex-start;
 }
-
 .obrazok {
   margin: auto;
   margin-top: 32px;
 }
-
 .featuresHeadline {
   font-size: 30px;
   color: white;
@@ -195,7 +171,6 @@ logo::after {
   margin: auto;
   margin-top: 50px;
 }
-
 .featuresParagraph {
   margin: auto;
   font-size: 20px;
@@ -209,15 +184,12 @@ logo::after {
   margin-bottom: 32px;
   margin-top: 10px;
 }
-
 #about {
   margin-top: 200px;
 }
-
 .featuresParagraph em {
   font-weight: 600;
 }
-
 .paragraph {
   font-size: 20px;
   width: 741px;
@@ -228,7 +200,6 @@ logo::after {
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
 }
-
 .details {
   font-weight: 600;
   font-size: 20px;
@@ -248,17 +219,14 @@ logo::after {
   align-items: center;
   border: 1px solid #263238;
 }
-
 .details a {
   text-decoration: none;
   color: white;
 }
-
 .details a:visited {
   text-decoration: none;
   color: white;
 }
-
 .nadpisA {
   color: #263238;
   letter-spacing: 0.2px;
@@ -272,7 +240,6 @@ logo::after {
   display: inline-block;
   vertical-align: baseline;
 }
-
 .nadpisD {
   color: #263238;
   letter-spacing: 0.2px;
@@ -285,23 +252,19 @@ logo::after {
   margin-top: 200px;
   vertical-align: baseline;
 }
-
 .nadpisD small {
   font-weight: 400;
   font-size: 20px;
   line-height: 30px;
 }
-
 .nadpisA small {
   font-weight: 400;
   font-size: 20px;
   line-height: 30px;
 }
-
 .paragraph span {
   font-weight: 600;
 }
-
 #companies {
   margin-top: 168px;
   background-color: #ff725e;
@@ -314,15 +277,12 @@ logo::after {
 #companies img {
   vertical-align: middle;
 }
-
 #companies a {
   margin: 0 40px;
 }
-
 #companies a:first-child {
   margin-left: 0px;
 }
-
 .nadpisC {
   color: white;
   letter-spacing: 0.2px;
@@ -334,7 +294,6 @@ logo::after {
   margin: 0 auto;
   margin-bottom: 32px;
 }
-
 .nadpisB {
   color: #263238;
   letter-spacing: 0.2px;
@@ -346,7 +305,6 @@ logo::after {
   margin: 0 auto;
   margin-top: 168px;
 }
-
 .detail {
   color: #263238;
   letter-spacing: 0.2px;
@@ -355,7 +313,6 @@ logo::after {
   font-family: "Montserrat", sans-serif;
   line-height: 45px;
 }
-
 .lowerDetail {
   color: #263238;
   letter-spacing: 0.2px;
@@ -364,21 +321,21 @@ logo::after {
   font-family: "Montserrat", sans-serif;
   line-height: 27px;
 }
-
 .lowerDetail strong {
   font-weight: 700;
 }
-
 .tlacidlo {
   font-weight: 700;
   font-size: 18px;
   line-height: 27px;
   color: white;
   background-color: #ff725e;
-  /*border-radius: 1000px;*/
+  /*border-radius: 1000px;
+ */
   border: none;
   height: 50px;
-  /*text-align: center;*/
+  /*text-align: center;
+ */
   width: 550px;
   letter-spacing: 0.2px;
   display: flex;
@@ -387,17 +344,14 @@ logo::after {
   margin-bottom: 8px;
   border-radius: 1092px;
 }
-
 .tlacidlo a {
   text-decoration: none;
   color: white;
 }
-
 .tlacidlo a:visited {
   text-decoration: none;
   color: white;
 }
-
 .poznamka {
   color: #263238;
   letter-spacing: 0.2px;
@@ -407,18 +361,15 @@ logo::after {
   line-height: 27px;
   margin-top: 0px;
 }
-
 #references {
   margin-top: 350px;
 }
-
 .refBox {
   width: 434px;
   height: 535px;
   background-color: #ff725e;
   border-radius: 60px;
 }
-
 .refBox p {
   font-weight: 400;
   font-size: 24px;
@@ -427,7 +378,6 @@ logo::after {
   width: 350px;
   margin: 0 auto;
 }
-
 .refBox h5 {
   letter-spacing: 0.2px;
   color: white;
@@ -438,16 +388,13 @@ logo::after {
   margin: 0 auto;
   margin-top: 32px;
 }
-
 .que {
   margin: 32px 40px;
 }
-
 #footer {
   margin-top: 200px;
   background-color: #263238;
 }
-
 #footer h6 {
   color: white;
   font-weight: 400;
@@ -456,21 +403,15 @@ logo::after {
   letter-spacing: 0.2px;
   padding: 50px 0px;
 }
-
 #footer h6 a {
   text-decoration: underline;
   color: white;
 }
-
 #footer h6 a:visited {
   text-decoration: underline;
   color: white;
 }
-
-/* 
-DOWNLOAD PAGE
-*/
-
+/* DOWNLOAD PAGE */
 #pageTitle h1 {
   text-align: center;
   margin: 0 auto;
@@ -482,7 +423,6 @@ DOWNLOAD PAGE
   border-right: none;
   font-weight: 900;
 }
-
 #pageTitle img {
   display: block;
   margin-left: auto;
@@ -491,13 +431,11 @@ DOWNLOAD PAGE
   margin-top: 200px;
   margin-bottom: -300px;
 }
-
 #pageTitle a {
   text-align: center;
   margin: 0 auto;
   line-height: 36px;
 }
-
 .flex-containerD {
   width: 80%;
   margin: 0 auto;
@@ -508,7 +446,6 @@ DOWNLOAD PAGE
   justify-content: space-evenly;
   align-items: flex-start;
 }
-
 #pageTitle small {
   font-size: 24px;
   text-align: center;
@@ -516,15 +453,12 @@ DOWNLOAD PAGE
   font-weight: 600;
   line-height: 36px;
 }
-
 #windows {
   margin-top: 50px;
 }
-
 #windows h1 {
   text-align: left;
 }
-
 #windows p {
   font-size: 20px;
   letter-spacing: 0.2px;
@@ -535,54 +469,44 @@ DOWNLOAD PAGE
   line-height: 36px;
   letter-spacing: 0.2px;
 }
-
 #macOS {
   margin-top: 50px;
 }
-
 #macOS h1 {
   text-align: left;
   margin-top: 50px;
 }
-
 #macOS p {
   font-size: 20px;
   letter-spacing: 0.2px;
   color: #263238;
 }
-
 #macOS strong {
   font-size: 24px;
   line-height: 36px;
   letter-spacing: 0.2px;
 }
-
 #linux {
   margin-top: 50px;
 }
-
 #linux h1 {
   text-align: left;
   margin-top: 50px;
 }
-
 #linux ol {
   list-style-position: inside;
   font-size: 20px;
   letter-spacing: 0.2px;
   color: #263238;
 }
-
 #linux ol li {
   padding-left: 15px;
 }
-
 #linux i {
   font-size: 20px;
   letter-spacing: 0.2px;
   color: #263238;
 }
-
 #linux p {
   font-size: 20px;
   letter-spacing: 0.2px;
@@ -593,32 +517,26 @@ DOWNLOAD PAGE
   line-height: 36px;
   letter-spacing: 0.2px;
 }
-
 #pageTitle p {
   text-align: center;
 }
-
 #update {
   margin-top: 50px;
 }
-
 #update h1 {
   text-align: left;
   margin-top: 50px;
 }
-
 #update p {
   font-size: 20px;
   letter-spacing: 0.2px;
   color: #263238;
 }
-
 #update strong {
   font-size: 24px;
   line-height: 36px;
   letter-spacing: 0.2px;
 }
-
 .download_button {
   font-weight: 700;
   font-size: 30px;
@@ -634,28 +552,20 @@ DOWNLOAD PAGE
   letter-spacing: 0.2px;
   height: 56px;
 }
-
 .download_button a {
   color: white !important;
   margin: 0 auto;
 }
-
 .download_button a:visited {
   color: white !important;
 }
-
 .os {
   padding-left: 15px;
 }
-
-/* 
-FEATRES PAGE
-*/
-
+/* FEATRUES PAGE */
 #aboutFeatures {
   margin-top: 200px;
 }
-
 #aboutFeatures p {
   margin-top: 10px;
   font-size: 20px;
@@ -663,7 +573,6 @@ FEATRES PAGE
   letter-spacing: 0.2px;
   color: #263238;
 }
-
 #aboutFeatures ul {
   margin-top: -20px;
   font-size: 24px;
@@ -671,7 +580,9 @@ FEATRES PAGE
   letter-spacing: 0.2px;
   color: #263238;
 }
-
+#aboutFeatures a {
+  font-weight: 600;
+}
 #aboutFeatures ul li {
   list-style: circle !important;
   display: list-item;
@@ -679,12 +590,10 @@ FEATRES PAGE
   font-size: 20px;
   padding-bottom: 20px;
 }
-
 #aboutFeatures ul p {
   list-style-type: none !important;
   list-style-position: inside !important;
 }
-
 .imgCenter {
   height: 404.083px;
   display: block;
@@ -692,36 +601,27 @@ FEATRES PAGE
   margin-right: auto;
   padding-top: 24px;
 }
-
 table {
   text-align: left;
   margin: 20px 0px;
   width: 100%;
 }
-
 table th {
   font-weight: 600;
 }
-
 .first th {
   font-size: 22px;
   padding-bottom: 10px;
   font-weight: 700;
 }
-
 .second {
   font-style: italic;
   font-weight: 400;
 }
-
-/*
-DOCUMENTATION PAGE
-*/
-
+/* DOCUMENTATION PAGE */
 #aboutFeatures h2 {
   padding-bottom: 10px;
 }
-
 code {
   background-color: #161b22;
   color: white;
@@ -729,8 +629,11 @@ code {
   padding: 8px 10px;
   border-radius: 5px;
 }
-
 h2 {
   color: #263238;
   font-weight: 600;
+}
+/* COMMUNITY PAGE */
+mark {
+  background-color: #eee0b5;
 }
